<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">QR-Code Localizer</string>
    <string name="scanButtonText">Scan code</string>
    <string name="submitNewLocationButtonText">Send New Location</string>
    <string name="locationHeadlineText">1. Current position (GPS)</string>
    <string name="scanQRCodeHeadlineText">2. Scan QR-Code</string>
    <string name="settingsMenuText">Settings</string>
    <string name="aboutMenuText">Info</string>
    <string name="backText">Back</string>
    <string name="aboutText">QR-Code Localizer powered by qraz.at!</string>
    <string name="addressSettings">Service - Settings</string>
    <string name="qrazUrlHint">QRAZ.AT URL</string>
    <string name="apiUrlHint">API URL</string>
    <string name="userSettings">User - Settings</string>    
    <string name="userNameHint">Username</string>
    <string name="passwordHint">Password</string>
    <string name="updateSuccessful">Update was successful :-)</string>
    <string name="updateFailed">Update failed :-(</string>
    <string name="requestFailed">Request failed :-(</string>
    <string name="submitNewLocationHeadlineText">3. Submit New Location</string>
    <string name="noDataForUpdate">No data for update available!</string>
    <string name="locationPreviewText">Location Preview</string>
    <string name="satellite">Satellite</string>
    <string name="map">Map</string>
    <string name="mapTypeSelection">Map-type selection</string>
    <string name="developedBy">DEVELOPED BY</string>
    <string name="devTeam">DEV-TEAM</string>
    <string name="staff">Master of Web-Site Development:\tMichael F. \t\t-\t\t Head Of Graphical Design:\tOliver K. \t\t-\t\t Creative Art Director:\tFelix L. \t\t-\t\t Chief Mobile Device Programmer:\tChristoph P. \t\t-\t\t Head Of User-Interaction Design:\tChristian P. \t\t-\t\t Master Of Social Networking:\tThorsten Twittolinski</string>
    
    <string name="GoogleMapsAPIKey">0XDVMvfQ4hPX8iimvIVVZAON3c4WJ2KTQYkW1qA</string>
    <string name="GoogleMapsAPIKey_Debug">0XDVMvfQ4hPVZnUB8HFFRzNWo9Trv92xmbGuNHg</string>
</resources>
