<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    >
    
    <TextView android:id="@+id/addressSettingsHeadline"
        android:text="@string/addressSettings"
        android:textColor="#4E95D4"
        android:textSize="20sp"
        android:layout_marginTop="10dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    
    <View android:background="#4E95D4" 
        android:layout_width = "fill_parent" 
        android:layout_height="1dip"
        android:layout_marginBottom="10dip" />
	
    <EditText android:id="@+id/qrazUrl"
        android:hint="@string/qrazUrlHint"
        android:inputType="textUri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    
    <EditText android:id="@+id/updateUrl"
        android:hint="@string/updateUrlHint"
        android:inputType="textUri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    
    
    <TextView android:id="@+id/userSettingsHeadline"
        android:text="@string/userSettings"
        android:textColor="#4E95D4"
        android:textSize="20sp"
        android:layout_marginTop="15dip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    
    <View android:background="#4E95D4" 
        android:layout_width = "fill_parent" 
        android:layout_height="1dip"
        android:layout_marginBottom="15dip"/>
    
	<EditText android:id="@+id/userName"
        android:hint="@string/userNameHint"
        android:inputType="textPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
     
	<EditText android:id="@+id/password"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>	
	    
</LinearLayout>
