<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_marginTop="2sp"
    android:paddingTop="1dip"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/backgroundColor" >
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/darkGray" >
        
        <ImageButton 
	        android:id="@+id/mapsButton"
		    android:background="@null"
		    android:layout_width="wrap_content"
       		android:layout_height="wrap_content"
       		android:layout_marginLeft="3sp"
       		android:src="@drawable/ic_menu_mapmode"
		    android:contentDescription="@string/locationPreviewText"
		    android:onClick="onMapButtonClick"
		    android:layout_alignParentLeft="true"  />
        
        <ImageButton 
	        android:id="@+id/settingsButton"
		    android:background="@null"
		    android:layout_width="wrap_content"
       		android:layout_height="wrap_content"
       		android:layout_margin="5sp"
       		android:layout_marginRight="10sp"
       		android:src="@drawable/ic_sysbar_quicksettings"
		    android:contentDescription="@string/settingsMenuText"
		    android:onClick="onSettingsButtonClick" 
			android:layout_toLeftOf="@+id/aboutButton" />

        <ImageButton
            android:id="@+id/aboutButton"
            android:background="@null"
            android:layout_width="wrap_content"
       		android:layout_height="wrap_content"
       		android:layout_marginRight="3sp"
       		android:src="@drawable/ic_menu_info_details"
		    android:contentDescription="@string/aboutMenuText"
        	android:onClick="onAboutButtonClick"
            android:layout_alignParentRight="true" />

    </RelativeLayout>
    
    <ScrollView
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent">
	    
	    <LinearLayout 
	        	android:layout_margin="5dip"
	        android:orientation="vertical"
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content" >
		    
			<TextView 
			    android:id="@+id/locationHeadline"
		        android:text="@string/locationHeadlineText"
		        android:textColor="@color/headlineColor"
		        android:textSize="20sp"
		        android:layout_marginLeft="3dip"
		        android:layout_marginTop="5dip"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"/>
		    
		    <View 
		        android:background="@color/headlineColor" 
		        android:layout_width = "fill_parent" 
		        android:layout_height="1dip"
		        android:layout_marginBottom="15dip"/>
		    
		    <TextView  
			    android:id="@+id/gpsLocationTextView"
			    android:textColor="@color/textColor"
			    android:layout_marginLeft="3dip"
		        android:layout_width="fill_parent" 
			    android:layout_height="wrap_content" />
		     
		    <com.google.android.maps.MapView
			    android:id="@+id/smallMapView"
			    android:layout_marginTop="10dip"
			    android:layout_width="fill_parent"
			    android:layout_height="100dip"
			    android:clickable="false"
			    android:apiKey="@string/GoogleMapsAPIKey_Debug" />
			
		     
			<TextView 
			    android:id="@+id/qrCodeInfoHeadline"
		        android:text="@string/scanQRCodeHeadlineText"
		        android:textColor="@color/headlineColor"
		        android:textSize="20sp"
		        android:layout_marginTop="15dip"
		        android:layout_marginLeft="3dip"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"/>
		    
		    <View 
		        android:background="@color/headlineColor" 
		        android:layout_width = "fill_parent" 
		        android:layout_height="1dip"
		        android:layout_marginBottom="15dip"/>
		    
		    <RelativeLayout 
		        android:layout_width="fill_parent" 
	            android:layout_height="wrap_content">
			    
			    <Button
				    android:id="@+id/scanButton"
				    android:layout_width="wrap_content" 
				    android:layout_height="wrap_content" 
				    android:text="@string/scanButtonText"
				    android:onClick="onScanButtonClick" />
			    
			    <TextView  
				    android:id="@+id/qrCodeContentsTextView"
				    android:textColor="@color/textColor"
			    	android:layout_marginLeft="10dip"
			    	android:layout_marginTop="10dip"
			        android:layout_width="fill_parent" 
				    android:layout_height="wrap_content"
				    android:layout_toRightOf="@id/scanButton" />
			    
			    <TextView  
			        android:id="@+id/qrCodeLocationTextView"
				    android:textColor="@color/textColor"
			    	android:layout_marginLeft="3dip"
			    	android:layout_marginTop="5dip"
			        android:layout_width="fill_parent" 
				    android:layout_height="wrap_content"
				    android:layout_below="@id/scanButton" />
			    
		    </RelativeLayout>
		    
		    
		    <TextView 
		        android:id="@+id/submitNewLocationHeadline"
		        android:text="@string/submitNewLocationHeadlineText"
		        android:textColor="@color/headlineColor"
		        android:textSize="20sp"
		        android:layout_marginLeft="3dip"
		        android:layout_marginTop="15dip"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"/>
		    
		    <View 
		        android:id="@+id/submitNewLocationLine" 
		        android:background="@color/headlineColor" 
		        android:layout_width = "fill_parent" 
		        android:layout_height="1dip"
		        android:layout_marginBottom="15dip"/>
		    
		     <Button 
		        android:id="@+id/submitNewLocationButton"
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content" 
			    android:text="@string/submitNewLocationButtonText"
			    android:onClick="onSubmitNewLocationButtonClick" />
		     
		</LinearLayout>
	</ScrollView>
</LinearLayout>